--- a/src/engineer.html
+++ b/src/engineer.html
@@ -1,13 +1,13 @@
-<div class="card">
-    <div class="card-header">
-        <h2 class="card-title">(NAME)</h2>
-        <h3 class="card-title">(ROLE)</h3>
+<div class="card mx-3">
+    <div class="card-header bg-success">
+        <h2 class="card-title">{{ name }}</h2>
+        <h3 class="card-title">{{ role }}</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">(ID)</li>
-            <li class="list-group-item">(EMAIL)</li>
-            <li class="list-group-item">(GITHUB)</li>
+            <li class="list-group-item">ID: {{ id }}</li>
+            <li class="list-group-item">Email: <a href="mailto:{{ email }}">{{ email }}</a></li>
+            <li class="list-group-item">GitHub: {{ github }}</li>
         </ul>
     </div>
 </div>
