--- a/src/main.html
+++ b/src/main.html
@@ -13,15 +13,15 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="jumbotron mb-3">
+            <div class="col-12 bg-info d-flex jumbotron mb-3">
                 <h1 class="text-center">My Team</h1>
             </div>
         </div>
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-12 justify-content-center">
-                (MYTEAM)
+            <div class="col-12 d-flex justify-content-center">
+                {{ team }}
             </div>
         </div>
     </div>
